fix show cell input number on Safari (#277)

--- a/frontend/public/jupyter-theme-light.css
+++ b/frontend/public/jupyter-theme-light.css
@@ -13395,7 +13395,7 @@
     text-align: right;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    /* text-overflow: ellipsis; */
     /* Disable text selection */
     -webkit-user-select: none;
     -moz-user-select: none;
